openapi schema, definitions & sdks updated; endpoints added for tasks feature
