# agents-api/agents_api/autogen/openapi_model.py
@@ -1,6 +1,6 @@
 # generated by datamodel-codegen:
 #   filename:  openapi.yaml
-#   timestamp: 2024-05-16T13:06:33+00:00
+#   timestamp: 2024-05-29T15:18:53+00:00
 
 from __future__ import annotations
 
@@ -821,6 +821,76 @@ class DocIds(BaseModel):
     user_doc_ids: List[str]
 
 
+class ExecutionTransition(BaseModel):
+    id: UUID
+    execution_id: UUID
+    created_at: AwareDatetime
+    outputs: Dict[str, Any]
+    """
+    Outputs from an Execution Transition
+    """
+    from_: Annotated[List[str | int], Field(alias="from")]
+    to: List[str | int]
+
+
+class PromptWorkflowStep(BaseModel):
+    prompt: List[InputChatMLMessage]
+    """
+    List of ChatML Messages in Jinja Templates
+    """
+    settings: ChatSettings
+
+
+class CELObject(BaseModel):
+    pass
+    model_config = ConfigDict(
+        extra="allow",
+    )
+
+
+class YieldWorkflowStep(BaseModel):
+    workflow: str
+    arguments: CELObject
+
+
+class ToolCallWorkflowStep(BaseModel):
+    tool_id: str
+    arguments: CELObject
+
+
+class ErrorWorkflowStep(BaseModel):
+    error: str
+
+
+class IfElseWorkflowStep(BaseModel):
+    if_: Annotated[str, Field(alias="if")]
+    then: YieldWorkflowStep
+    else_: Annotated[YieldWorkflowStep, Field(alias="else")]
+
+
+class CreateExecution(BaseModel):
+    task_id: UUID
+    arguments: Dict[str, Any]
+    """
+    JSON Schema of parameters
+    """
+    status: Annotated[
+        str,
+        Field(pattern="^(queued|starting|running|waiting_for_input|success|failed)$"),
+    ]
+    """
+    Execution Status
+    """
+
+
+class ToolResponse(BaseModel):
+    id: UUID | None = None
+    """
+    Optional Tool ID
+    """
+    output: Dict[str, Any]
+
+
 class Agent(BaseModel):
     name: str
     """
@@ -1002,3 +1072,98 @@ class PatchToolRequest(BaseModel):
     """
     Function definition and parameters
     """
+
+
+class Execution(BaseModel):
+    id: UUID
+    task_id: UUID
+    created_at: UUID
+    arguments: Dict[str, Any]
+    """
+    JSON Schema of parameters
+    """
+    status: Annotated[
+        str,
+        Field(pattern="^(queued|starting|running|waiting_for_input|success|failed)$"),
+    ]
+    """
+    Execution Status
+    """
+
+
+class EvaluateWorkflowStep(BaseModel):
+    evaluate: CELObject
+
+
+class CreateTask(BaseModel):
+    """
+    Describes a Task
+    """
+
+    name: str
+    """
+    Name of the Task
+    """
+    description: str | None = None
+    """
+    Optional Description of the Task
+    """
+    tools_available: Set[UUID] | None = None
+    """
+    Available Tools for the Task
+    """
+    input_schema: Dict[str, Any] | None = None
+    """
+    JSON Schema of parameters
+    """
+    main: (
+        PromptWorkflowStep
+        | EvaluateWorkflowStep
+        | YieldWorkflowStep
+        | ToolCallWorkflowStep
+        | ErrorWorkflowStep
+        | IfElseWorkflowStep
+    )
+    """
+    Entrypoint Workflow for the Task
+    """
+
+
+class Task(BaseModel):
+    """
+    Describes a Task
+    """
+
+    name: str
+    """
+    Name of the Task
+    """
+    description: str | None = None
+    """
+    Optional Description of the Task
+    """
+    tools_available: Set[UUID] | None = None
+    """
+    Available Tools for the Task
+    """
+    input_schema: Dict[str, Any] | None = None
+    """
+    JSON Schema of parameters
+    """
+    main: List[
+        PromptWorkflowStep
+        | EvaluateWorkflowStep
+        | YieldWorkflowStep
+        | ToolCallWorkflowStep
+        | ErrorWorkflowStep
+        | IfElseWorkflowStep
+    ]
+    """
+    Entrypoint Workflow for the Task
+    """
+    id: UUID
+    """
+    ID of the Task
+    """
+    created_at: AwareDatetime
+    agent_id: UUID
