# agents-api/agents_api/models/execution/get_execution_status.py
@@ -1,0 +1,12 @@
+from typing import Literal
+from uuid import UUID
+
+from ..utils import cozo_query
+
+
+@cozo_query
+def get_execution_status_query(task_id: UUID, developer_id: UUID) -> tuple[str, dict]:
+    task_id = str(task_id)
+    developer_id = str(developer_id)
+    query = """"""
+    return (query, {"task_id": task_id, "developer_id": developer_id})
